Src/Resources/KtaneWeb.css
/* ... */
        #actual-periodic-table .module.highlight {
            z-index: 100;
            box-shadow: 0 0 10px rgba(0,0,0,.6);
            border-color: black;
        }

    #actual-periodic-table .manual-selector {
        display: block;
        position: absolute;
        right: 1px;
        top: 20px;
        width: 8px;
        height: 10px;
        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 10"><path fill="hsl(240, 60%, 70%)" d="M0,0 8,0 4,10z" /></svg>');
        background-repeat: no-repeat;
        background-size: contain;
    }

    #actual-periodic-table .symbol {
        font-family: Georgia;
        position: absolute;
        box-sizing: border-box;
        left: 0;
        right: 0;
        top: 0;
        height: 36px;
        padding: 7px 7px 0 36px;
        font-size: 18pt;
        text-align: center;
    }

        #actual-periodic-table .symbol .mod-icon {
            background-repeat: no-repeat;
            position: absolute;
            top: 2px;
            left: 2px;
            width: 32px;
            height: 32px;
        }

    #actual-periodic-table .VeryEasy {
        background-color: #dfd;
    }

    #actual-periodic-table .Easy {
        background-color: #efd;
    }

    #actual-periodic-table .Medium {
        background-color: #ffd;
    }

    #actual-periodic-table .Hard {
        background-color: #fed;
    }

    #actual-periodic-table .VeryHard {
        background-color: #fdd;
    }

    #actual-periodic-table .souvenir {
        position: absolute;
        left: 35px;
        top: -1px;
        font-size: 8pt;
        text-align: left;
    }

    #actual-periodic-table .tpscore {
        position: absolute;
        right: 2px;
        top: -1px;
        font-size: 8pt;
        text-align: right;
    }

    #actual-periodic-table .name {
        position: absolute;
        left: 0;
        right: 0;
        top: 36px;
        bottom: 1px;
        font-family: 'Agency FB';
        font-size: 9pt;
        line-height: 1;
    }

        #actual-periodic-table .name .inner {
            position: absolute;
            left: 50%;
            top: 50%;
            width: 100%;
            transform: translate(-50%, -50%);
            line-height: .9;
        }

#module-ui table td, #module-ui table th {
    border: none;
}

#module-ui table th {
    font-size: 16pt;
    font-weight: bold;
    white-space: nowrap;
}

#module-ui table.fields th {
    text-align: right;
}

#module-ui table.nested > tbody > tr > th {
    text-align: left;
}

    #module-ui table.nested > tbody > tr > th h2 {
        font-size: 20pt;
        border-bottom: 1px solid #888;
        margin: 0;
    }

#module-ui table.nested > tbody > tr > td {
    vertical-align: top;
}

#module-ui table td .explain {
    font-size: 9pt;
    white-space: pre-line;
}

#module-ui table td input:not([type="checkbox"]), #module-ui table td select, #module-ui table td textarea {
    width: 100%;
    box-sizing: border-box;
}

#module-ui table td textarea {
    height: 10em;
}

#legal {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: .6;
    border-top: 1px solid #888;
    font-size: 10pt;
    padding: .5em;
}
/* ... */

